Bindings/C/Include/OVR_CAPI.h

typedef char ovrBool;
typedef struct ovrVector2i_
{
    int x, y;
} ovrVector2i;
typedef struct ovrSizei_
{
    int w, h;
} ovrSizei;
typedef struct ovrRecti_
{
    ovrVector2i Pos;
    ovrSizei    Size;
} ovrRecti;
typedef struct ovrQuatf_
{
    float x, y, z, w;  
} ovrQuatf;
typedef struct ovrVector2f_
{
    float x, y;
} ovrVector2f;
typedef struct ovrVector3f_
{
    float x, y, z;
} ovrVector3f;
typedef struct ovrPosef_
{
    ovrQuatf     Orientation;
    ovrVector3f  Position;    
} ovrPosef;
typedef struct ovrPoseStatef_
{
    ovrPosef     Pose;
    ovrVector3f  AngularVelocity;
    ovrVector3f  LinearVelocity;
    ovrVector3f  AngularAcceleration;
    ovrVector3f  LinearAcceleration;
    double       TimeInSeconds;         
} ovrPoseStatef;
typedef struct ovrFovPort_
{
    float UpTan;
    float DownTan;
    float LeftTan;
    float RightTan;
} ovrFovPort;
typedef enum
{
    ovrHmd_None             = 0,    
    ovrHmd_DK1              = 3,
    ovrHmd_DKHD             = 4,
    ovrHmd_CrystalCoveProto = 5,
    ovrHmd_DK2              = 6,
    ovrHmd_Other             
} ovrHmdType;
typedef enum
{
    ovrEye_Left  = 0,
    ovrEye_Right = 1,
    ovrEye_Count = 2
} ovrEyeType;
typedef struct ovrHmdStruct* ovrHmd;
typedef struct ovrHmdDesc_
{
    ovrHmd      Handle;  
    ovrHmdType  Type;
    const char* ProductName;    
    const char* Manufacturer;
    unsigned int Caps;
    unsigned int DistortionCaps;
    ovrSizei    Resolution;
    ovrVector2i WindowsPos;     
    ovrFovPort  DefaultEyeFov[ovrEye_Count];
    ovrFovPort  MaxEyeFov[ovrEye_Count];
    ovrEyeType  EyeRenderOrder[ovrEye_Count];
    const char* DisplayDeviceName;
    long        DisplayId;
} ovrHmdDesc;
typedef struct ovrSensorState_
{
    ovrPoseStatef  Predicted;
    ovrPoseStatef  Recorded;
    float          Temperature;    
    unsigned int   StatusFlags;
} ovrSensorState;
typedef struct ovrSensorDesc_
{
    short   VendorId;
    short   ProductId;
    char    SerialNumber[24];
} ovrSensorDesc;
typedef struct ovrFrameTiming_
{
    float            DeltaSeconds;
    double            ThisFrameSeconds;
    double            TimewarpPointSeconds;
    double            NextFrameSeconds;
    double            ScanoutMidpointSeconds;
    double            EyeScanoutSeconds[2];    
} ovrFrameTiming;
typedef struct ovrEyeDesc_
{    
    ovrEyeType  Eye;
    ovrSizei    TextureSize;     
    ovrRecti    RenderViewport;  
    ovrFovPort  Fov;
} ovrEyeDesc;
typedef struct ovrEyeRenderDesc_
{    
    ovrEyeDesc  Desc;        
    ovrRecti    DistortedViewport;             
    ovrVector2f PixelsPerTanAngleAtCenter;  
    ovrVector3f ViewAdjust;                  
} ovrEyeRenderDesc;
typedef struct ovrRenderAPIConfigHeader_
{
    ovrRenderAPIType API;
    ovrSizei         RTSize;
    int              Multisample;
} ovrRenderAPIConfigHeader;
typedef struct ovrRenderAPIConfig_
{
    ovrRenderAPIConfigHeader Header;
    uintptr_t                PlatformData[8];
} ovrRenderAPIConfig;
typedef struct ovrTextureHeader_
{
    ovrRenderAPIType API;
    ovrSizei         TextureSize;
    ovrRecti         RenderViewport;  
} ovrTextureHeader;
typedef struct ovrTexture_
{
    ovrTextureHeader Header;
    uintptr_t        PlatformData[8];
} ovrTexture;
OVR_EXPORT ovrHmd   ovrHmd_Create(int index);
OVR_EXPORT void     ovrHmd_ResetSensor(ovrHmd hmd);
OVR_EXPORT ovrSensorState ovrHmd_GetSensorState(ovrHmd hmd, double absTime);
OVR_EXPORT ovrBool     ovrHmd_GetSensorDesc(ovrHmd hmd, ovrSensorDesc* descOut);
OVR_EXPORT void     ovrHmd_GetDesc(ovrHmd hmd, ovrHmdDesc* desc);
OVR_EXPORT ovrSizei ovrHmd_GetFovTextureSize(ovrHmd hmd, ovrEyeType eye, ovrFovPort fov,
                                             float pixelsPerDisplayPixel);
OVR_EXPORT ovrBool ovrHmd_ConfigureRendering( ovrHmd hmd,
                                              const ovrRenderAPIConfig* apiConfig,
                                              unsigned int hmdCaps,
                                              unsigned int distortionCaps,
                                              const ovrEyeDesc eyeDescIn[2],
                                              ovrEyeRenderDesc eyeRenderDescOut[2] );
OVR_EXPORT ovrFrameTiming ovrHmd_BeginFrame(ovrHmd hmd, unsigned int frameIndex);
OVR_EXPORT void     ovrHmd_EndFrame(ovrHmd hmd);
OVR_EXPORT ovrPosef ovrHmd_BeginEyeRender(ovrHmd hmd, ovrEyeType eye);
OVR_EXPORT void     ovrHmd_EndEyeRender(ovrHmd hmd, ovrEyeType eye,
                                        ovrPosef renderPose, ovrTexture* eyeTexture);
OVR_EXPORT ovrEyeRenderDesc ovrHmd_GetRenderDesc(ovrHmd hmd, ovrEyeDesc eyeDesc);
typedef struct ovrDistortionVertex_
{
    ovrVector2f Pos;
    float       TimeWarpFactor;  
    float       VignetteFactor;  
    ovrVector2f TexR;
    ovrVector2f TexG;
    ovrVector2f TexB;    
} ovrDistortionVertex;
typedef struct ovrDistortionMesh_
{
    ovrDistortionVertex* pVertexData;
    unsigned short*      pIndexData;
    unsigned int         VertexCount;
    unsigned int         IndexCount;
} ovrDistortionMesh;
OVR_EXPORT ovrBool  ovrHmd_CreateDistortionMesh( ovrHmd hmd, ovrEyeDesc eyeDesc,
                                                 unsigned int distortionCaps,
                                                 ovrVector2f uvScaleOffsetOut[2], 
                                                 ovrDistortionMesh *meshData );
OVR_EXPORT void     ovrHmd_DestroyDistortionMesh( ovrDistortionMesh* meshData );