Bindings/Java/src/main/java/com/oculusvr/api/OvrLibrary.java

  /**
   * Resets sensor orientation.<br>
   * Original signature : <code>void ovrHmd_ResetSensor(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:416</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_ResetSensor(com.oculusvr.api.OvrLibrary.ovrHmd)} and {@link #ovrHmd_ResetSensor(com.sun.jna.Pointer)} instead
   */
  @Deprecated 
  void ovrHmd_ResetSensor(Pointer hmd);
  /**
   * Resets sensor orientation.<br>
   * Original signature : <code>void ovrHmd_ResetSensor(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:416</i>
   */
  void ovrHmd_ResetSensor(OvrLibrary.ovrHmd hmd);
  /**
   * This may also be used for more refined timing of FrontBuffer rendering logic, etc.<br>
   * Original signature : <code>ovrSensorState ovrHmd_GetSensorState(ovrHmd, double)</code><br>
   * <i>native declaration : OVR_CAPI.h:423</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetSensorState(com.oculusvr.api.OvrLibrary.ovrHmd, double)} and {@link #ovrHmd_GetSensorState(com.sun.jna.Pointer, double)} instead
   */
  @Deprecated 
  com.oculusvr.api.ovrSensorState_.ByValue ovrHmd_GetSensorState(Pointer hmd, double absTime);
  /**
   * This may also be used for more refined timing of FrontBuffer rendering logic, etc.<br>
   * Original signature : <code>ovrSensorState ovrHmd_GetSensorState(ovrHmd, double)</code><br>
   * <i>native declaration : OVR_CAPI.h:423</i>
   */
  com.oculusvr.api.ovrSensorState_.ByValue ovrHmd_GetSensorState(OvrLibrary.ovrHmd hmd, double absTime);
  /**
   * Only valid after StartSensor.<br>
   * Original signature : <code>ovrBool ovrHmd_GetSensorDesc(ovrHmd, ovrSensorDesc*)</code><br>
   * <i>native declaration : OVR_CAPI.h:427</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetSensorDesc(com.oculusvr.api.OvrLibrary.ovrHmd, com.oculusvr.api.ovrSensorDesc_)} and {@link #ovrHmd_GetSensorDesc(com.sun.jna.Pointer, com.oculusvr.api.ovrSensorDesc_)} instead
   */
  @Deprecated 
  byte ovrHmd_GetSensorDesc(Pointer hmd, ovrSensorDesc_ descOut);
  /**
   * Only valid after StartSensor.<br>
   * Original signature : <code>ovrBool ovrHmd_GetSensorDesc(ovrHmd, ovrSensorDesc*)</code><br>
   * <i>native declaration : OVR_CAPI.h:427</i>
   */
  byte ovrHmd_GetSensorDesc(OvrLibrary.ovrHmd hmd, ovrSensorDesc_ descOut);
  /**
   * Fills in description about HMD; this is the same as filled in by ovrHmd_Create.<br>
   * Original signature : <code>void ovrHmd_GetDesc(ovrHmd, ovrHmdDesc*)</code><br>
   * <i>native declaration : OVR_CAPI.h:434</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetDesc(com.oculusvr.api.OvrLibrary.ovrHmd, com.oculusvr.api.ovrHmdDesc_)} and {@link #ovrHmd_GetDesc(com.sun.jna.Pointer, com.oculusvr.api.ovrHmdDesc_)} instead
   */
  @Deprecated 
  void ovrHmd_GetDesc(Pointer hmd, ovrHmdDesc_ desc);
  /**
   * Fills in description about HMD; this is the same as filled in by ovrHmd_Create.<br>
   * Original signature : <code>void ovrHmd_GetDesc(ovrHmd, ovrHmdDesc*)</code><br>
   * <i>native declaration : OVR_CAPI.h:434</i>
   */
  void ovrHmd_GetDesc(OvrLibrary.ovrHmd hmd, ovrHmdDesc_ desc);
  /**
   * can improve performance.<br>
   * Original signature : <code>ovrSizei ovrHmd_GetFovTextureSize(ovrHmd, ovrEyeType, ovrFovPort, float)</code><br>
   * <i>native declaration : OVR_CAPI.h:441</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetFovTextureSize(com.oculusvr.api.OvrLibrary.ovrHmd, int, com.oculusvr.api.ovrFovPort_.ByValue, float)} and {@link #ovrHmd_GetFovTextureSize(com.sun.jna.Pointer, int, com.oculusvr.api.ovrFovPort_.ByValue, float)} instead
   */
  @Deprecated 
  com.oculusvr.api.ovrSizei_.ByValue ovrHmd_GetFovTextureSize(Pointer hmd, int eye, com.oculusvr.api.ovrFovPort_.ByValue fov, float pixelsPerDisplayPixel);
  /**
   * can improve performance.<br>
   * Original signature : <code>ovrSizei ovrHmd_GetFovTextureSize(ovrHmd, ovrEyeType, ovrFovPort, float)</code><br>
   * <i>native declaration : OVR_CAPI.h:441</i>
   */
  com.oculusvr.api.ovrSizei_.ByValue ovrHmd_GetFovTextureSize(OvrLibrary.ovrHmd hmd, int eye, com.oculusvr.api.ovrFovPort_.ByValue fov, float pixelsPerDisplayPixel);
  /**
   * Original signature : <code>ovrBool ovrHmd_ConfigureRendering(ovrHmd, const ovrRenderAPIConfig*, unsigned int, unsigned int, const ovrEyeDesc[2], ovrEyeRenderDesc[2])</code><br>
   * <i>native declaration : OVR_CAPI.h:483</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_ConfigureRendering(com.oculusvr.api.OvrLibrary.ovrHmd, com.oculusvr.api.ovrRenderAPIConfig_, int, int, com.oculusvr.api.ovrEyeDesc_[], com.oculusvr.api.ovrEyeRenderDesc_[])} and {@link #ovrHmd_ConfigureRendering(com.sun.jna.Pointer, com.oculusvr.api.ovrRenderAPIConfig_, int, int, com.oculusvr.api.ovrEyeDesc_[], com.oculusvr.api.ovrEyeRenderDesc_[])} instead
   */
  @Deprecated 
  byte ovrHmd_ConfigureRendering(Pointer hmd, ovrRenderAPIConfig_ apiConfig, int hmdCaps, int distortionCaps, Pointer eyeDescIn, Pointer eyeRenderDescOut);
  /**
   * Original signature : <code>ovrBool ovrHmd_ConfigureRendering(ovrHmd, const ovrRenderAPIConfig*, unsigned int, unsigned int, const ovrEyeDesc[2], ovrEyeRenderDesc[2])</code><br>
   * <i>native declaration : OVR_CAPI.h:483</i>
   */
  byte ovrHmd_ConfigureRendering(OvrLibrary.ovrHmd hmd, ovrRenderAPIConfig_ apiConfig, int hmdCaps, int distortionCaps, ovrEyeDesc_ eyeDescIn[], ovrEyeRenderDesc_ eyeRenderDescOut[]);
  /**
   * Original signature : <code>ovrBool ovrHmd_ConfigureRendering(ovrHmd, const ovrRenderAPIConfig*, unsigned int, unsigned int, const ovrEyeDesc[2], ovrEyeRenderDesc[2])</code><br>
   * <i>native declaration : OVR_CAPI.h:483</i>
   */
  byte ovrHmd_ConfigureRendering(Pointer hmd, ovrRenderAPIConfig_ apiConfig, int hmdCaps, int distortionCaps, ovrEyeDesc_ eyeDescIn[], ovrEyeRenderDesc_ eyeRenderDescOut[]);
  /**
   * Pass 0 for frame index if not using GetFrameTiming.<br>
   * Original signature : <code>ovrFrameTiming ovrHmd_BeginFrame(ovrHmd, unsigned int)</code><br>
   * <i>native declaration : OVR_CAPI.h:495</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_BeginFrame(com.oculusvr.api.OvrLibrary.ovrHmd, int)} and {@link #ovrHmd_BeginFrame(com.sun.jna.Pointer, int)} instead
   */
  @Deprecated 
  com.oculusvr.api.ovrFrameTiming_.ByValue ovrHmd_BeginFrame(Pointer hmd, int frameIndex);
  /**
   * Pass 0 for frame index if not using GetFrameTiming.<br>
   * Original signature : <code>ovrFrameTiming ovrHmd_BeginFrame(ovrHmd, unsigned int)</code><br>
   * <i>native declaration : OVR_CAPI.h:495</i>
   */
  com.oculusvr.api.ovrFrameTiming_.ByValue ovrHmd_BeginFrame(OvrLibrary.ovrHmd hmd, int frameIndex);
  /**
   * *** This Function will to Present/SwapBuffers and potentially wait for GPU Sync ***.<br>
   * Original signature : <code>void ovrHmd_EndFrame(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:501</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_EndFrame(com.oculusvr.api.OvrLibrary.ovrHmd)} and {@link #ovrHmd_EndFrame(com.sun.jna.Pointer)} instead
   */
  @Deprecated 
  void ovrHmd_EndFrame(Pointer hmd);
  /**
   * *** This Function will to Present/SwapBuffers and potentially wait for GPU Sync ***.<br>
   * Original signature : <code>void ovrHmd_EndFrame(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:501</i>
   */
  void ovrHmd_EndFrame(OvrLibrary.ovrHmd hmd);
  /**
   * HmdDesc.EyeRenderOrder[0] first.<br>
   * Original signature : <code>ovrPosef ovrHmd_BeginEyeRender(ovrHmd, ovrEyeType)</code><br>
   * <i>native declaration : OVR_CAPI.h:511</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_BeginEyeRender(com.oculusvr.api.OvrLibrary.ovrHmd, int)} and {@link #ovrHmd_BeginEyeRender(com.sun.jna.Pointer, int)} instead
   */
  @Deprecated 
  com.oculusvr.api.ovrPosef_.ByValue ovrHmd_BeginEyeRender(Pointer hmd, int eye);
  /**
   * HmdDesc.EyeRenderOrder[0] first.<br>
   * Original signature : <code>ovrPosef ovrHmd_BeginEyeRender(ovrHmd, ovrEyeType)</code><br>
   * <i>native declaration : OVR_CAPI.h:511</i>
   */
  com.oculusvr.api.ovrPosef_.ByValue ovrHmd_BeginEyeRender(OvrLibrary.ovrHmd hmd, int eye);
  /**
   * be different if different pose was used for rendering.<br>
   * Original signature : <code>void ovrHmd_EndEyeRender(ovrHmd, ovrEyeType, ovrPosef, ovrTexture*)</code><br>
   * <i>native declaration : OVR_CAPI.h:519</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_EndEyeRender(com.oculusvr.api.OvrLibrary.ovrHmd, int, com.oculusvr.api.ovrPosef_.ByValue, com.oculusvr.api.ovrTexture_)} and {@link #ovrHmd_EndEyeRender(com.sun.jna.Pointer, int, com.oculusvr.api.ovrPosef_.ByValue, com.oculusvr.api.ovrTexture_)} instead
   */
  @Deprecated 
  void ovrHmd_EndEyeRender(Pointer hmd, int eye, com.oculusvr.api.ovrPosef_.ByValue renderPose, ovrTexture_ eyeTexture);
  /**
   * be different if different pose was used for rendering.<br>
   * Original signature : <code>void ovrHmd_EndEyeRender(ovrHmd, ovrEyeType, ovrPosef, ovrTexture*)</code><br>
   * <i>native declaration : OVR_CAPI.h:519</i>
   */
  void ovrHmd_EndEyeRender(OvrLibrary.ovrHmd hmd, int eye, com.oculusvr.api.ovrPosef_.ByValue renderPose, ovrTexture_ eyeTexture);
  /**
   * the game side.<br>
   * Original signature : <code>ovrEyeRenderDesc ovrHmd_GetRenderDesc(ovrHmd, ovrEyeDesc)</code><br>
   * <i>native declaration : OVR_CAPI.h:546</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetRenderDesc(com.oculusvr.api.OvrLibrary.ovrHmd, com.oculusvr.api.ovrEyeDesc_.ByValue)} and {@link #ovrHmd_GetRenderDesc(com.sun.jna.Pointer, com.oculusvr.api.ovrEyeDesc_.ByValue)} instead
   */
  @Deprecated 
  ovrEyeRenderDesc_.ByValue ovrHmd_GetRenderDesc(Pointer hmd, ovrEyeDesc_.ByValue eyeDesc);
  /**
   * the game side.<br>
   * Original signature : <code>ovrEyeRenderDesc ovrHmd_GetRenderDesc(ovrHmd, ovrEyeDesc)</code><br>
   * <i>native declaration : OVR_CAPI.h:546</i>
   */
  ovrEyeRenderDesc_.ByValue ovrHmd_GetRenderDesc(OvrLibrary.ovrHmd hmd, ovrEyeDesc_.ByValue eyeDesc);
  /**
   * ovrDistortionMesh values will be set to null.<br>
   * Original signature : <code>ovrBool ovrHmd_CreateDistortionMesh(ovrHmd, ovrEyeDesc, unsigned int, ovrVector2f[2], ovrDistortionMesh*)</code><br>
   * <i>native declaration : OVR_CAPI.h:581</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_CreateDistortionMesh(com.oculusvr.api.OvrLibrary.ovrHmd, com.oculusvr.api.ovrEyeDesc_.ByValue, int, com.oculusvr.api.ovrVector2f_[], com.oculusvr.api.ovrDistortionMesh_)} and {@link #ovrHmd_CreateDistortionMesh(com.sun.jna.Pointer, com.oculusvr.api.ovrEyeDesc_.ByValue, int, com.oculusvr.api.ovrVector2f_[], com.oculusvr.api.ovrDistortionMesh_)} instead
   */
  @Deprecated 
  byte ovrHmd_CreateDistortionMesh(Pointer hmd, ovrEyeDesc_.ByValue eyeDesc, int distortionCaps, Pointer uvScaleOffsetOut, ovrDistortionMesh_ meshData);
  /**
   * ovrDistortionMesh values will be set to null.<br>
   * Original signature : <code>ovrBool ovrHmd_CreateDistortionMesh(ovrHmd, ovrEyeDesc, unsigned int, ovrVector2f[2], ovrDistortionMesh*)</code><br>
   * <i>native declaration : OVR_CAPI.h:581</i>
   */
  byte ovrHmd_CreateDistortionMesh(OvrLibrary.ovrHmd hmd, ovrEyeDesc_.ByValue eyeDesc, int distortionCaps, ovrVector2f_ uvScaleOffsetOut[], ovrDistortionMesh_ meshData);
  /**
   * ovrDistortionMesh values will be set to null.<br>
   * Original signature : <code>ovrBool ovrHmd_CreateDistortionMesh(ovrHmd, ovrEyeDesc, unsigned int, ovrVector2f[2], ovrDistortionMesh*)</code><br>
   * <i>native declaration : OVR_CAPI.h:581</i>
   */
  byte ovrHmd_CreateDistortionMesh(Pointer hmd, ovrEyeDesc_.ByValue eyeDesc, int distortionCaps, ovrVector2f_ uvScaleOffsetOut[], ovrDistortionMesh_ meshData);
  /**
   * are set to null and zeroes after the call.<br>
   * Original signature : <code>void ovrHmd_DestroyDistortionMesh(ovrDistortionMesh*)</code><br>
   * <i>native declaration : OVR_CAPI.h:588</i>
   */
  void ovrHmd_DestroyDistortionMesh(ovrDistortionMesh_ meshData);
